--- a/style.css
+++ b/style.css
@@ -5,7 +5,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+html,body{
+    background-color: #c8eadf;
+
+}
+
 #main {
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -72,8 +79,9 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 1200px;
     background-color: #c8eadf;
+    flex-wrap: wrap;
 }
 
 .DateOfferPrice {
@@ -285,6 +293,12 @@
     width: 1000px;
 }
 
+/* @media only screen and (max-width:945px){
+    #partners{
+        width: 140px;
+    }
+} */
+
 #partnerstext {
     display: flex;
     flex-direction: row;
@@ -319,6 +333,7 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 #main2div {
@@ -409,6 +424,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .logo img {
@@ -470,6 +486,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 #main4div {
@@ -597,6 +614,7 @@
     background-color: #c2e5da;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 #mian5div {
@@ -666,6 +684,7 @@
     background-image: linear-gradient(140deg, #29c194, #0e8f84);
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 #main6div {
@@ -743,6 +762,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #c2e5da;
+    flex-wrap: wrap;
 }
 
 #main7div {
@@ -1013,6 +1033,7 @@
     background-color: rgb(10, 60, 10);
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .main8imges img {
@@ -1044,6 +1065,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 #main9 div {
