--- a/style.css
+++ b/style.css
@@ -4,40 +4,31 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-html,body{
-    background-color: #c8eadf;
-
-}
-
-#main {
+/* #main {
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+} */
 
 #Whatsapp {
     height: 27px;
     width: 25px;
 }
 
-#heading {
+/* #heading {
     font-size: 50px;
-}
+} */
 
 #one {
-    margin: 20px;
     height: 56px;
-    width: 375px;
+    /* width: 40%; */
     background-color: #34D49A82;
-    position: sticky;
-    z-index: 100;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     border-radius: 10px;
 }
 
@@ -50,38 +41,35 @@ html,body{
 }
 
 #middle {
-    margin-top: 70px;
-    display: flex;
-    height: 211px;
-    width: 843px;
-    flex-direction: column;
+    /* margin-top: 70px;
+    display: flex; */
+    /* width: 843px; */
+    /* flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
-#middle h1 {
-    height: 124px;
-    width: 743px;
+#heading{
+    /* height: 150px;
     background-image: linear-gradient(129deg, #2bc495, #0c8b83);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-
-#middle p {
-    margin: 8px;
-    height: 84px;
-    width: 590px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; */
 }
 
 #main1 {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 100%; */
     height: 1200px;
     background-color: #c8eadf;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 
 .DateOfferPrice {
@@ -98,7 +86,7 @@ html,body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     height: 450px;
 }
 
@@ -137,7 +125,7 @@ html,body{
     align-items: center;
     justify-content: center;
     height: 88px;
-    width: 458px;
+    /* width: 458px; */
     background-color: white;
     border-radius: 10px;
     font-size: 18px;
@@ -157,7 +145,6 @@ html,body{
 #leftthird {
     background-color: white;
     height: 190px;
-    width: 458px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -166,7 +153,6 @@ html,body{
 
 #thirdfirst {
     background-color: #D3EDE7;
-    width: 436px;
     height: 165px;
     border-radius: 10px;
     display: flex;
@@ -197,7 +183,7 @@ html,body{
 }
 
 #company {
-    width: 436px;
+    /* width: 436px; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -208,6 +194,7 @@ html,body{
 #company img {
     height: 25px;
     width: 80px;
+    margin: 10px;
 
 }
 
@@ -220,25 +207,24 @@ html,body{
     margin-top: 10px;
     position: relative;
     height: 20px;
-    width: 400px;
     border: 2px solid #000;
     border-top: 0;
 }
 
 #leftfourthtext {
-    position: absolute;
-    top: 10px;
-    left: 117px;
-    width: 166px;
-    height: 21px;
-    z-index: 1;
+
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    font-family: sans-serif;
+    left: 50%;
+    z-index: 1;
+    top: 100%;
     background-color: #c8eadf;
-    font-size: 15px;
-    font-weight: bold;
+    /* font-size: 28px; */
+    transform: translate(-50%, -50%);
 }
 
 #right-offer {
@@ -252,7 +238,6 @@ html,body{
 }
 
 #right-offer-photo {
-    width: 400px;
     height: 250px;
     background-image: linear-gradient(129deg, #2bc495, #0c8b83);
     border-radius: 20px;
@@ -263,7 +248,7 @@ html,body{
     /* width: 350px;
     height: 250px; */
     width: 100%;
-    height: auto;
+    height: 150%;
     border-radius: 20px;
 }
 
@@ -273,7 +258,6 @@ html,body{
 
 #right-offer-btn {
     height: 85px;
-    width: 400px;
     border-radius: 20px;
     background-image: linear-gradient(129deg, #2bc495, #0c8b83);
     display: flex;
@@ -290,7 +274,6 @@ html,body{
     position: relative;
     border-radius: 15px;
     margin-bottom: 70px;
-    width: 1000px;
 }
 
 /* @media only screen and (max-width:945px){
@@ -310,9 +293,8 @@ html,body{
     z-index: 1;
     top: 0%;
     background-color: #c8eadf;
-    font-size: 28px;
+    /* font-size: 28px; */
     transform: translate(-50%, -50%);
-    width: 435px;
 }
 
 #partnersimg {
@@ -325,7 +307,7 @@ html,body{
     box-sizing: border-box;
 }
 
-#main2 {
+/* #main2 {
     background-color: #c0e1d6;
     height: 750px;
     width: 100%;
@@ -334,7 +316,7 @@ html,body{
     justify-items: center;
     align-items: center;
     flex-wrap: wrap;
-}
+} */
 
 #main2div {
     height: 800px;
@@ -346,13 +328,11 @@ html,body{
 }
 
 #main2text {
-    width: 910px;
-    height: 70px;
-    font-size: 50px;
+    /* height: 70px;
     font-weight: 600;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .main2grid {
@@ -367,7 +347,6 @@ html,body{
 
 .gridbox {
     height: 132px;
-    width: 450px;
     background-color: rgba(255, 255, 255, .4);
     border: 1px solid rgba(3, 45, 48, .15);
     border-radius: 16px;
@@ -375,15 +354,16 @@ html,body{
 
 #main2text2 {
     height: 20px;
-    width: 400px;
+    /* width: 400px; */
 }
 
-.gridtext {
+/* .gridtext {
     height: 100px;
     width: 300px;
-}
+} */
 
 .gridbox {
+    font-size: 15px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -393,7 +373,7 @@ html,body{
 
 .iconimg {
     height: 60px;
-    width: 60px;
+    /* width: 60px; */
     background-image: linear-gradient(#2ac194, #0e8f85);
     border-radius: 10px;
     display: flex;
@@ -405,26 +385,25 @@ html,body{
     font-weight: bold;
 }
 
-#main2btn {
+.main2btn {
     height: 80px;
-    width: 800px;
     background-image: linear-gradient(129deg, #2bc495, #0c8b83);
     border-radius: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 #main3 {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5;
     height: 1000px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 .logo img {
@@ -456,14 +435,15 @@ html,body{
 }
 
 #main3div-content-text {
-    padding-top: 70px;
-    margin-bottom: 20px;
+    /* padding-top: 70px;
+    margin-bottom: 20px; */
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 800px;
+    /* width: 800px; */
     font-size: 35px;
     font-weight: bold;
+    flex-wrap: wrap;
 }
 
 .main3div-content {
@@ -473,20 +453,20 @@ html,body{
     align-items: center;
     width: 800px;
     height: 65px;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 500;
     background-color: white;
     border-radius: 10px;
 }
 
 #main4 {
-    background-color: #032d30;
+    /* background-color: #032d30;
     height: 900px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 #main4div {
@@ -507,17 +487,18 @@ html,body{
 
 #main4text {
     height: 50px;
-    width: 600px;
+    /* width: 600px; */
     font-size: 35px;
     font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .main4gridbox {
     width: 400px;
-    height: 150px;
+    height: 200px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -535,7 +516,7 @@ html,body{
 }
 
 .main4gridboxtextonly {
-    width: 400px;
+    /* width: 400px; */
     height: 120px;
     border-radius: 16px;
     background-color: rgba(255, 255, 255, .1);
@@ -548,7 +529,7 @@ html,body{
 
 .main4gridheading {
     color: #2ac395;
-    font-size: 30px;
+    /* font-size: 30px; */
 }
 
 .main4gridboxtext {
@@ -557,7 +538,7 @@ html,body{
 
 .main4gridboxtextonly {
     color: #2ac395;
-    font-size: 20px;
+    /* font-size: 20px; */
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -609,12 +590,12 @@ html,body{
 }
 
 #main5 {
-    height: 1200px;
+    /* height: 1200px;
     width: 100%;
     background-color: #c2e5da;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 #mian5div {
@@ -655,15 +636,18 @@ html,body{
     width: 300px;
     height: 80px;
     padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #main5text {
-    font-size: 35px;
-    font-weight: bold;
+    /* font-size: 35px;
+    font-weight: bold; */
 }
 
 #main5btn {
-    width: 400px;
+    /* width: 400px; */
     height: 80px;
     font-size: 25px;
     border-radius: 10px;
@@ -697,7 +681,7 @@ html,body{
 }
 
 #main6text {
-    width: 100%;
+    /* width: 100%; */
     height: 50px;
     font-size: 35px;
     font-weight: bold;
@@ -710,7 +694,7 @@ html,body{
     padding-top: 5px;
     background-color: white;
     height: 280px;
-    width: 600px;
+    /* width: 600px; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -720,8 +704,8 @@ html,body{
 
 #trainerinfo {
     background-color: #D3EDE7;
-    width: 300px;
-    height: 165px;
+    /* width: 300px; */
+    height: 230px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -731,7 +715,7 @@ html,body{
 }
 
 #main6trainerinfotext {
-    width: 250px;
+    /* width: 250px; */
     height: 165px;
     font-size: 13px;
 }
@@ -743,26 +727,24 @@ html,body{
 
 #main6text3 {
     font-size: 25px;
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-start; */
     color: white;
 
 }
 
-#main6img img {
-    width: 800px;
-}
+
 
 #main7 {
-    height: 1500px;
+    /* height: 1500px;
     width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     background-color: #c2e5da;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 #main7div {
@@ -775,7 +757,7 @@ html,body{
 }
 
 #main7text {
-    font-size: 30px;
+    font-size: 35px;
     font-weight: bold;
     color: black;
     display: flex;
@@ -793,23 +775,21 @@ html,body{
 }
 
 #main7left {
-    width: 500px;
-    height: 400px;
+    /* width: 500px; */
+    height: 420px;
     border-radius: 10px;
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
-#main7right {
-    width: 400px;
-    height: 350px;
-}
 
 .main7lefttext {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     margin-right: 20px;
     margin-left: 20px;
 
@@ -818,7 +798,7 @@ html,body{
 #main7lefttext1 {
     margin-top: 20px;
     height: 90px;
-    width: 350px;
+    /* width: 350px; */
     font-size: 30px;
     font-weight: bold;
 }
@@ -892,7 +872,7 @@ html,body{
 }
 
 .main7rightchecktext {
-    width: 400px;
+    /* width: 400px; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -902,18 +882,19 @@ html,body{
 
 .main7rightcheckbox {
     font-size: 13px;
-    width: 300px;
+    /* width: 300px; */
     height: 40px;
 }
 
 #main7right {
-    width: 500px;
+    /* width: 500px; */
     display: flex;
     flex-direction: column;
+    height: 350px;
 }
 
 #main7rightdiv {
-    width: 400px;
+    /* width: 400px; */
     height: 600px;
     display: flex;
     flex-direction: column;
@@ -970,7 +951,6 @@ html,body{
     border: 10px;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     background-color: #000;
     background-color: #86bfbb;
@@ -981,19 +961,15 @@ html,body{
     border-radius: 10px;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {
     background-color: #4da59f;
     color: black;
-    /* Change hover color */
 }
 
-/* Show the dropdown menu */
 .show {
     display: block;
 }
 
-/* Add arrow indicator */
 .dropdown::after {
     content: "";
     clear: both;
@@ -1073,5 +1049,8 @@ html,body{
     font-size: 13px;
 
 }
+
+
+
 
 
