--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.dropdowndiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
 /* #main {
     height: 100%;
     width: 100%;
